Logic refactoration
