# Chatmate/models.py
@@ -1,22 +1,14 @@
 from django.db import models
+from django.db.models.signals import post_save, post_delete
+from django.dispatch import receiver
+from Chatmate.Utility.processing_documents import load_documents
 
 class Documents(models.Model):
     title = models.CharField(max_length=255)
     file = models.FileField(upload_to='documents/', null=True, blank=True)
     link = models.URLField(null=True, blank=True)
     uploaded_at = models.DateTimeField(auto_now_add=True)
-
-    def delete(self, *args, **kwargs):
-        self.file.delete()
-        super().delete(*args, **kwargs)
-
-    def save(self, *args, **kwargs):
-        if self.pk:
-            old_file = Documents.objects.get(pk=self.pk).file
-            if old_file != self.file:
-                old_file.delete()
-        super().save(*args, **kwargs)
-
+    
     def __str__(self):
         return self.title
 
@@ -26,9 +18,13 @@ class Query(models.Model):
     created_at = models.DateTimeField(auto_now_add=True)
 
     def save(self, *args, **kwargs):
-        if Query.objects.filter(query_text=self.query_text).exists():
-            return
-        super().save(*args, **kwargs)
+        if not Query.objects.filter(query_text=self.query_text).exists():
+            super().save(*args, **kwargs)
 
     def __str__(self):
         return self.query_text
+
+class CombinedChunk(models.Model):
+    chunks = models.JSONField(default=list)  # Ensure default is an empty list
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
